--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -66,19 +66,6 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>670</x>
-      <y>450</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>退出</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -86,15 +73,74 @@
      <x>0</x>
      <y>0</y>
      <width>777</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_F">
     <property name="title">
-     <string>文件(&amp;F)</string>
+     <string>系统配置</string>
     </property>
+    <widget class="QMenu" name="menu_2">
+     <property name="title">
+      <string>连接</string>
+     </property>
+     <addaction name="action_camera"/>
+     <addaction name="action_LMI_120"/>
+     <addaction name="action_testPlatform"/>
+    </widget>
+    <widget class="QMenu" name="menu_4">
+     <property name="title">
+      <string>载入信息</string>
+     </property>
+     <addaction name="action_sizeInf"/>
+     <addaction name="action_silkScreenInf"/>
+     <addaction name="action_thresholdInf"/>
+     <addaction name="action_NNmodelInf"/>
+    </widget>
+    <widget class="QMenu" name="menu_5">
+     <property name="title">
+      <string>数据统计</string>
+     </property>
+     <addaction name="action_resultStats"/>
+     <addaction name="action_defectStats"/>
+     <addaction name="action_upload"/>
+    </widget>
+    <addaction name="menu_2"/>
+    <addaction name="menu_4"/>
+    <addaction name="menu_5"/>
+   </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>功能调试</string>
+    </property>
+    <widget class="QMenu" name="menu_6">
+     <property name="title">
+      <string>检测算法测试</string>
+     </property>
+     <addaction name="action_flatulenceDebug"/>
+     <addaction name="action_holeDebug"/>
+     <addaction name="action_bumpDebug"/>
+     <addaction name="action_dentDebug"/>
+     <addaction name="action_markDebug"/>
+     <addaction name="action_scratchDebug"/>
+    </widget>
+    <addaction name="action_cameraDebug"/>
+    <addaction name="action_lightDebug"/>
+    <addaction name="action_motionDebug"/>
+    <addaction name="menu_6"/>
+   </widget>
+   <widget class="QMenu" name="menu_7">
+    <property name="title">
+     <string>系统设置</string>
+    </property>
+    <addaction name="action_skinSet"/>
+    <addaction name="action_usrSet"/>
+    <addaction name="action_logout"/>
+    <addaction name="action_exit"/>
    </widget>
    <addaction name="menu_F"/>
+   <addaction name="menu"/>
+   <addaction name="menu_7"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -105,6 +151,121 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="action_camera">
+   <property name="text">
+    <string>相机设备</string>
+   </property>
+  </action>
+  <action name="action_LMI_120">
+   <property name="text">
+    <string>LMI 120设备</string>
+   </property>
+  </action>
+  <action name="action_testPlatform">
+   <property name="text">
+    <string>测试台</string>
+   </property>
+  </action>
+  <action name="action_sizeInf">
+   <property name="text">
+    <string>尺寸信息</string>
+   </property>
+  </action>
+  <action name="action_silkScreenInf">
+   <property name="text">
+    <string>丝印信息</string>
+   </property>
+  </action>
+  <action name="action_thresholdInf">
+   <property name="text">
+    <string>缺陷阈值</string>
+   </property>
+  </action>
+  <action name="action_NNmodelInf">
+   <property name="text">
+    <string>神经网络模型</string>
+   </property>
+  </action>
+  <action name="action_resultStats">
+   <property name="text">
+    <string>检测结果统计</string>
+   </property>
+  </action>
+  <action name="action_defectStats">
+   <property name="text">
+    <string>各缺陷统计</string>
+   </property>
+  </action>
+  <action name="action_upload">
+   <property name="text">
+    <string>上传数据库</string>
+   </property>
+  </action>
+  <action name="action_cameraDebug">
+   <property name="text">
+    <string>相机调试</string>
+   </property>
+  </action>
+  <action name="action_lightDebug">
+   <property name="text">
+    <string>灯光调试</string>
+   </property>
+  </action>
+  <action name="action_motionDebug">
+   <property name="text">
+    <string>运动调试</string>
+   </property>
+  </action>
+  <action name="action_flatulenceDebug">
+   <property name="text">
+    <string>气胀检测</string>
+   </property>
+  </action>
+  <action name="action_holeDebug">
+   <property name="text">
+    <string>凹点检测</string>
+   </property>
+  </action>
+  <action name="action_bumpDebug">
+   <property name="text">
+    <string>凸点检测</string>
+   </property>
+  </action>
+  <action name="action_dentDebug">
+   <property name="text">
+    <string>凹痕检测</string>
+   </property>
+  </action>
+  <action name="action_markDebug">
+   <property name="text">
+    <string>凸痕检测</string>
+   </property>
+  </action>
+  <action name="action_scratchDebug">
+   <property name="text">
+    <string>划痕检测</string>
+   </property>
+  </action>
+  <action name="action_skinSet">
+   <property name="text">
+    <string>皮肤设置</string>
+   </property>
+  </action>
+  <action name="action_usrSet">
+   <property name="text">
+    <string>用户设置</string>
+   </property>
+  </action>
+  <action name="action_logout">
+   <property name="text">
+    <string>注销</string>
+   </property>
+  </action>
+  <action name="action_exit">
+   <property name="text">
+    <string>退出</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
